@startuml CpuIdFactory

allowmixing
hide empty members

skinparam component {
    BackgroundColor<<Windows>> #B0C0F0
}
skinparam class {
    BackgroundColor<<Windows>> #B0C0F0
}
skinparam class {
    BackgroundColor<<Linux>> #FFF8D0
}

+interface ICpuIdFactory {
}
+interface ICpuId {
}
ICpuIdFactory .l.> ICpuId : <<returns>>

+interface ICpuIdX86 {
}
ICpuId <|-d- ICpuIdX86

component [x86\\cpuid.dll] as x86cpuidwin <<Windows>>
component [x64\\cpuid.dll] as x64cpuidwin <<Windows>>

namespace Native {
    namespace Win32 {
        class CpuIdLib <<static>> <<Windows>>
        class Kernel32 <<static>> <<Windows>>

        CpuIdLib -d- x86cpuidwin
        CpuIdLib -d- x64cpuidwin
    }
}

namespace CpuId {
    namespace Intel {
        ~class CpuIdX86 <<static>> {
            +{static} CreateCpuIdX86(ICpuIdRegisters,\n IEnumerable<CpuIdRegisters> cache): ICpuIdX86
        }
        ~class CpuIdNetFactory <<Linux>> <<Windows>> {
        }
        ICpuIdFactory <|-d-- CpuIdNetFactory
        ~class CpuIdLibFactory <<Windows>> {
        }
        ICpuIdFactory <|-d- CpuIdLibFactory
        ~class CpuIdX86XmlNodeFactory {
        }
        ICpuIdFactory <|-d-- CpuIdX86XmlNodeFactory

        ~class CpuRegisters {
        }
        ~class CpuIdLibRegisters <<Windows>> {
        }
        ~class CpuIdNetRegisters <<Linux>> <<Windows>> {
        }

        +class GenuineIntelCpu <<ICpuIdX86>> {
        }
        +class GenericIntelCpu <<ICpuIdX86>> {
        }
        +class AuthenticAmdCpu <<ICpuIdX86>> {
        }

        GenuineIntelCpu *-d- CpuRegisters
        GenericIntelCpu *-d- CpuRegisters
        AuthenticAmdCpu *-d- CpuRegisters

        CpuIdLibFactory -d-> CpuIdX86 : <<uses>>
        CpuIdLibFactory .d...> CpuIdLibRegisters : <<creates>>
        CpuIdLibFactory .d.> Native.Win32.CpuIdLib : <<uses>>
        CpuIdLibRegisters .d.> Native.Win32.CpuIdLib : <<uses>>
        CpuRegisters *-r- CpuIdLibRegisters

        CpuIdNetFactory -d-> CpuIdX86 : <<uses>>
        CpuIdNetFactory .d...> CpuIdNetRegisters : <<creates>>
        CpuRegisters *-r- CpuIdNetRegisters

        CpuIdX86 ..> GenuineIntelCpu : <<returns>>
        CpuIdX86 ..> GenericIntelCpu : <<returns>>
        CpuIdX86 ..> AuthenticAmdCpu : <<returns>>

        CpuIdX86XmlNodeFactory -d-> CpuIdX86 : <<uses>>
    }
}

+class CpuIdFactory {
}
ICpuIdFactory <|-d- CpuIdFactory
CpuIdFactory .d.> CpuId.Intel.CpuIdLibFactory : <<creates>>

+class CpuIdXmlFactory {
}
ICpuIdFactory <|-d- CpuIdXmlFactory
CpuIdXmlFactory .d.> CpuId.Intel.CpuIdX86XmlNodeFactory : <<creates>>

@enduml
